--- a/html3.html
+++ b/html3.html
@@ -17,7 +17,7 @@
             <div class="img">
             <img src="../Innoraft/images/img-1.jpg" id="bimage">
         </div>
-            <p class="heading">We will<b> make</b> your <b>business</b><br>great again</b></p>
+            <p class="heading">We will<b class="bold"> make</b> your <b class="bold">business</b><br>great again</b></p>
             <p class="heading2">Qnsectetur adipisicing et impedt repudiandae risi<br>
                 maiores dolore dolor. <br><br><a class="bix"> Contact us</a>&nbsp;&nbsp;&nbsp;&nbsp;<a class="bix1">Discover now</a><br><br><img src="../Innoraft/images/icons/darrow.png"></p>
             </div>
@@ -34,6 +34,42 @@
                 <div class="text1">
                     <img src="../Innoraft/images/img-3.jpg" height="200" width="200"></img>
                 </div>
+            </div>
+           <div class="body4">
+            <div class="head1">
+            <h1>Some of our<b class="bold"> best services</b> <br>to solve your problems</h1>
+        </div>
+            <div class="sec">
+            <div class="one"><img src="./images/img-5.jpg"><p>Digital marketing</p><a>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex cupiditate pariatur natus, laboriosam!</a></div>
+            <div class="one"><img src="./images/img-6.jpg"><p>Web development</p><a>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex cupiditate pariatur natus, laboriosam!</a></div>
+            <div class="one"><img src="./images/img-7.png"><p>UX/UI design</p><a>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex cupiditate pariatur natus, laboriosam!</a></div>
+        </div>
+        <div class="foot"><button>ORDER A SERVICE</button></div>
+        </div>
+        <br>
+        <br>
+        <div class="body5">
+            <p><b class="a">Good design</b> is obvious<br> Great design is transparent.</p>
+            <p id="a"><b class="a">About Joe @</b> graphic designer, digital literacy teacher</p>
+            <br>
+            <div class="b">
+                <div class="c" id="c"><p>Show all</p></div>
+                <div class="c"><p>Design</p></div>
+                <div class="c"><p>Code</p></div>
+                <div class="c"><p>Art</p></div>
+            </div>
+            <div class="d">
+                <div class="e"><img src="./images/12-min.jpg"></div>
+                <div class="f" id="g"><div class="image"><img src="./images/2-min.jpg"></div><p class="k">+</p><br><br><p>Project Title</p><br><br><p>Code</p></div>
+                <div class="f"><img src="./images/2-min.jpg"></div>
+            </div>
+            <div class="g">
+                <div class="f"><img src="./images/2-min.jpg"></div>
+                <div class="e"><img src="./images/12-min.jpg"></div>
+            </div>
+            <div class="h">
+                <div class="f"><img src="./images/2-min.jpg"></div>
+                <div class="f" id="f"><img src="./images/2-min.jpg"></div>
             </div>
         </div>
         </body>
