--- a/html3.html
+++ b/html3.html
@@ -72,5 +72,43 @@
                 <div class="f" id="f"><img src="./images/2-min.jpg"></div>
             </div>
         </div>
+        <div class="body6">
+            <div class="head2">
+                <div class="one1"><img src="./images/img-8.jpg"><br><br><a>Unique customers:</a><p>3519 +</p></div>
+                <div class="one1"><img src="./images/img-9.jpg"><br><br><a>Completed projects:</a><p>3519 +</p></div>
+                <div class="one1" id="one1"><img src="./images/img-10.png"><br><br><a>Happy users:</a><p>3519 +</p></div>
+                <div class="one1"><img src="./images/img-11.png"><br><br><a>Honors & awards:</a><p>3519 +</p></div>
+            </div>
+        </div>
+        <br>
+        <br>
+        <br>
+        <div class="body7">
+            <div class="sec1">
+            <h1>Flexible<b class="bold1"> Pricing</b> Plans</h1>
+            <p>Dolor sit Mollitia harum ea ut eaque velit.</p>
+        </div>
+        <div class="sec2">
+            <div class="one2"><p>Trial version</p><a>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a><br>
+            <p>free</p><a>500gb drive space</a><br><br><a>Unlimited messages</a><br><br><a class="light">Free email address</a><br><br><a class="light">Friendly support</a><br><br><br><button class="box">DOWNLOAD</button></div>
+            <div class="one2"><p>Regular</p><a>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a><br>
+                <p><b class="small">$</b> 19<b class="small">/month</b></p><a>500gb drive space</a><br><br><a>Unlimited messages</a><br><br><a>Free email address</a><br><br><a class="light">Friendly support</a><br><br><br><button class="box" id="box">PURCHASE</button></div>
+            <div class="one2"><p>Extended</p><a>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a><br>
+                <p><b class="small">$</b> 29<b class="small">/month</b></p><a>500gb drive space</a><br><br><a>Unlimited messages</a><br><br><a>Free email address</a><br><br><a>Friendly support</a><br><br><br><button class="box">PURCHASE</button></div>
+        </div>
+        </div>
+        <div class="body8">
+            <div class="head3"><p><b class="bi">Testimonials</b> About Us</p>
+            <p class="span"><b class="bi"><</b></p>
+            <p class="span1"><b class="bi">></b></p>
+            </div>
+            <br>
+            <div class="head4">
+            <p>Dolor sit Mollitia harum ea ut eaque velit.</p></div>
+            <div class="head5">
+                <div class="one3"><img src="./images/t-1.jpeg"><br><br><a class="name">Robert Newmen</a><br><br><a>Microsoft corperation</a><p>Dolor sit amet, consectetur adipisicing elit. Dolor sit Mollitia harum ea ut eaque velit. Ex rem provident nobis at deserunt, dolores blanditiis vero aut. Fuga ab quisquam aliquid eius vitae! Dolor sit Mollitia harum ea ut eaque velit</p></div>
+                <div class="one3"><img src="./images/t-2.jpeg"><br><br><a class="name">Robert Newmen</a><br><br><a>Space X</a><p>Dolor sit amet, consectetur adipisicing elit. Dolor sit Mollitia harum ea ut eaque velit. Ex rem provident nobis at deserunt, dolores blanditiis vero aut. Fuga ab quisquam aliquid eius vitae! Dolor sit Mollitia harum ea ut eaque velit</p></div>
+            </div>
+        </div>
         </body>
         </html>
