--- a/html3.html
+++ b/html3.html
@@ -1,11 +1,10 @@
 <html>
     <link rel="stylesheet" type="text/css" href="css3.css">
     <body>
-    
-    <div>
+        <div class="d1">
         <div id="body1">
             <img src="../Innoraft/images/head_logo.jpg" id="logo">
-            <div class="top"><h1 class="mainhead">Home</h1></div>
+            <div class="top" id="e1"><h1 class="mainhead" id="c1">Home</h1></div>
             <div class="top"><h1 class="mainhead">About</h1></div>
             <div class="top"><h1 class="mainhead">Services</h1></div>
             <div class="top"><h1 class="mainhead">Portfolio</h1></div>
@@ -13,13 +12,14 @@
             <div class="top"><h1 class="mainhead">Blog &#9660;</h1></div>
             <div class="top"><img src="../Innoraft/images/mail.jpg" class="mainhead"></div>
         </div>
+    </div>
         <div id="body2">
-            <div class="img">
-            <img src="../Innoraft/images/img-1.jpg" id="bimage">
-        </div>
-            <p class="heading">We will<b class="bold"> make</b> your <b class="bold">business</b><br>great again</b></p>
+            <div class="head0">
+            <p class="heading">We Will<b class="bold"> Make</b> Your <b class="bold">Business</b><br>Great Again</b></p>
+            </div>
             <p class="heading2">Qnsectetur adipisicing et impedt repudiandae risi<br>
-                maiores dolore dolor. <br><br><a class="bix"> Contact us</a>&nbsp;&nbsp;&nbsp;&nbsp;<a class="bix1">Discover now</a><br><br><img src="../Innoraft/images/icons/darrow.png"></p>
+                maiores dolore dolor. <br><br><button class="bix" id="f1">CONTACT US</button><button class="bix">RECOVER NOW</button><br><br><img src="../Innoraft/images/icons/darrow.png"></p>
+            </div>
             </div>
             <br>
             <div id="body3">
@@ -27,12 +27,23 @@
                     <p class="head">Hello <b>World</b></p>
               <p>Eeligendi autem consequatur cupiditate deleniti officiis aliquid repellat provident ut rerum excepturi, ex iure veritatis. Deleniti numquam quis voluptate tempora, Aliquam voluptatibus placeat, maiores!</p>
               <br>
-              <p class="sub">Exploring your area of activity</p>
-              <p class="sub">Competitive analysis</p>
-              <p class="sub">Do the work in time</p>
+              <div class="j1">
+              <div class="i1">
+                <div class="sub"><img src="./images/img-10.png"></div>
+                <div class="sub"><p>Exploring your area of activity</p></div>
+              </div>
+              <div class="i1">
+                <div class="sub"><img src="./images/img-7.png"></div>
+                <div class="sub"><p>Competitive analysis</p></div>
+              </div>
+              <div class="i1">
+                <div class="sub"><img src="./images/img-11.png"></div>
+                <div class="sub"><p>Do the work in time</p></div>
+              </div>
+            </div>
                 </div>
                 <div class="text1">
-                    <img src="../Innoraft/images/img-3.jpg" height="200" width="200"></img>
+                    <img src="../Innoraft/images/img-3.jpg" height="200" width="100"></img>
                 </div>
             </div>
            <div class="body4">
@@ -60,8 +71,8 @@
             </div>
             <div class="d">
                 <div class="e"><img src="./images/12-min.jpg"></div>
-                <div class="f" id="g"><div class="image"><img src="./images/2-min.jpg"></div><p class="k">+</p><br><br><p>Project Title</p><br><br><p>Code</p></div>
-                <div class="f"><img src="./images/2-min.jpg"></div>
+                <div class="o"><div class="image"><p class="con">+</p><br><br><br><br><h2>Project Title</h2><a class="co">Code</a></div></div>
+                <div class="f" id="g"><img src="./images/2-min.jpg"></div>
             </div>
             <div class="g">
                 <div class="f"><img src="./images/2-min.jpg"></div>
@@ -109,6 +120,44 @@
                 <div class="one3"><img src="./images/t-1.jpeg"><br><br><a class="name">Robert Newmen</a><br><br><a>Microsoft corperation</a><p>Dolor sit amet, consectetur adipisicing elit. Dolor sit Mollitia harum ea ut eaque velit. Ex rem provident nobis at deserunt, dolores blanditiis vero aut. Fuga ab quisquam aliquid eius vitae! Dolor sit Mollitia harum ea ut eaque velit</p></div>
                 <div class="one3"><img src="./images/t-2.jpeg"><br><br><a class="name">Robert Newmen</a><br><br><a>Space X</a><p>Dolor sit amet, consectetur adipisicing elit. Dolor sit Mollitia harum ea ut eaque velit. Ex rem provident nobis at deserunt, dolores blanditiis vero aut. Fuga ab quisquam aliquid eius vitae! Dolor sit Mollitia harum ea ut eaque velit</p></div>
             </div>
+        </div>
+        <br><br>
+        <div class="body9">
+            <div class="head6">
+                <h1>Latest <b class="bold1">blog</b> posts</h1>
+                <p>Dolor sit Mollitia harum ea ut eaque velit.</p>
+                <div class="head7">
+                    <div class="one4"><img src="./images/img-2-1.jpg"><p>Fuga ab quisquam culpa aliquid<br> eius vitae..</p><a>Delectus culpa in consequuntur nemo non</a><br><a>reprehenderit repellat deleniti sunt...</a><button class="box">READ MORE</button></div>
+                    <div class="one4"><img src="./images/img-2-1.jpg"><p>Fuga ab quisquam non reiciendis<br> aliquid eius vitae.</p><a>Delectus culpa in consequuntur nemo non</a><br><a>reprehenderit repellat deleniti sunt...</a><button class="box" id="box">READ MORE</button></div>
+                    <div class="one4"><img src="./images/img-2-1.jpg"><p>Fuga ab quisquam aliquid eius<br> vitae.</p><a>Delectus culpa in consequuntur nemo non</a><br><a>reprehenderit repellat deleniti sunt...</a><button class="box">READ MORE</button></div>
+                </div>
+            </div>
+        </div>
+        <div class="body10">
+            <div class="head8"><img src="./images/head_logo.jpg"></div>
+            <div class="head9">
+                <div class="one5"><p>Company</p>
+                    <a>ABOUT</a><br>
+                    <a>SUPPORT</a><br>
+                    <a>PRESS</a><br>
+                    <a>LEGAL & PRIVACY</a>
+                </div>
+                <div class="one5"><p>Quick links</p>
+                        <a>NEWS</a><br>
+                        <a>CONTACT US</a><br>
+                        <a>FAQ</a>
+                </div>
+                <div class="one5"><p>Social</p>
+                        <a>FACEBOOK</a><br>
+                        <a>GOOGLE +</a><br>
+                        <a>TWITTER</a><br>
+                        <a>INSTAGRAM</a>
+                </div>
+                <div class="one5"><p>Subscibe newsletter</p>
+                    <div class="ab"><a>email<img src="./images/img-12.jpg"></a></div>
+                </div>
+            </div>
+            <div class="head10"><a>COPYRIGHT © ALL RIGHTS RESERVED LATE 2018 | DESIGN AND DEVELOPMENT BY MILLERDIGITALDESIGN</a></div><br>
         </div>
         </body>
         </html>
