--- a/html.html
+++ b/html.html
@@ -14,6 +14,44 @@
     <li>Milk</li>
     </ul>
     <br><br>
+    <table border="1" bordercolor="grey" bgcolor="white">
+        <tr>
+            <td width="500">Company</td>
+            <td width="250">Contact</td>
+            <td width="150">Country</td>
+        </tr>
+        <tr bgcolor="grey">
+            <td>Alfreds Futterkiste</td>
+            <td>Maria Andras</td>
+            <td>Germany</td>
+        </tr>
+        <tr bgcolor="white">
+            <td>Centro comercial moctezuma</td>
+            <td>Fransisco chang</td>
+            <td>Maxico</td>
+        </tr>
+        <tr bgcolor="grey">
+            <td>Emst handle</td>
+            <td>Rolend mendle</td>
+            <td>Austria</td>
+        </tr>
+        <tr bgcolor="white">
+            <td>Island trading</td>
+            <td>Heelen bennett</td>
+            <td>UK</td>
+        </tr>
+        <tr bgcolor="grey">
+            <td>Laughing bacchus winecellers</td>
+            <td>Yoshi tannamuri</td>
+            <td>Canada</td>
+        </tr>
+        <tr bgcolor="white">
+            <td>Magazzini alimentari ruiniti</td>
+            <td>Giovanni Rovelli</td>
+            <td>Italy</td>
+        </tr>
+    </table>
+    <br><br>
     <div class="a">
     <div class="b"></div>
     <div class="split left"></div>
@@ -57,5 +95,7 @@
 </div>
 </div>
 <div class="m"></div>
+<br>
+<br>
 </body>
 </html>
