--- a/htmlbasic2.html
+++ b/htmlbasic2.html
@@ -7,23 +7,19 @@
             <div class="seven1"><div class="head"><h1 class="mainhead">Down with the state</h1>
                 <a class="mainhead2">Abandon the left vs. right paradigm and adopt new ideals, where consistency and logic reign supreme.</a></div>
                 </div>
-            <div class="seven2"></div>
+            <div class="seven2"><img src="./images/img-14.png"></div>
         </div>
         <div class="eight">
-            <div class="ei1">
-            <div class="eight1"><h4>But what about the roads?</h4>
+            <div class="eight1" id="eight1"><div class="eight2"><h4>But what about the roads?</h4>
                 <p>You just don't understand economics, like supply and demand. Don't worry kiddo, where there's a demand there will be a supply:we'll all have our roads.</p></div>
-            
-            </div>    
-            <div class="ei">
-            <div class="eight2"><h4>Is taxation theft?</h4>
+            </div>
+            <div class="eight1" id="eight2"><div class="eight2"><h4>Is taxation theft?</h4>
                 <p>If I came to your house with some heavily armed buddies, demanded that you and your neighbors give me a percentage of your income, in return for some crappy monopolized services that you didn't ask for, would you consider that thelt?</p></div>
             </div>
-            <div class="ei">
-            <div class="eight3"><h4>So, what you're saying is...?</h4>
+            <div class="eight1" id="eight3"><div class="eight2"><h4>So, what you're saying is...?</h4>
                 <p>Libertarians want to live in a world where gay couples can protect their poppy fields with fully automatic weapons.</p>
                 <p>A world where voluntaryism and property rights are treated with the highest respect.</p></div>
-            </div>
+            </div>    
         </div>
     </div>
     </div>
